src/k8s/apps/hack4goodsgf.com/base/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hack4goodsgf-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
