src/k8s/apps/hack4goodsgf.com/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hack4goodsgf
  labels:
    app.kubernetes.io/name: hack4goodsgf
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: hack4goodsgf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hack4goodsgf
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 60
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        runAsNonRoot: true
        fsGroup: 33
      containers:
        - name: wordpress
          image: ghcr.io/sgfdevs/hack4goodsgf.com:1.2.5
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /healthz.html
              port: http
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 150
          livenessProbe:
            httpGet:
              path: /healthz.html
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz.html
              port: http
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: wordpress
              mountPath: /var/www/html
            - name: content
              mountPath: /var/www/html/wp-content
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: wordpress
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: content
          persistentVolumeClaim:
            claimName: hack4goodsgf-content
