src/k8s/apps/hack4goodsgf.com/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hack4goodsgf
  labels:
    app.kubernetes.io/name: hack4goodsgf
spec:
  selector:
    app.kubernetes.io/name: hack4goodsgf
  ports:
    - name: http
      port: 80
      targetPort: http
